--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ h1{
     text-align: center;
     background-color: black;
     height: 200px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
+
 
 #month{
     text-align: center;
