--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 *{background-color: black;
 color: white;}
 
-
+.img2{
+    width: 100%;
+    height: 400px;
+}
 h1{
     justify-content: center;
     text-align: center;
