--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ color: white;}
     width: 100%;
     height: 400px;
 }
+
+@media (max-width: 600px) {
+    .img2 {
+      width: 100%; 
+      height: auto; 
+    }
+  }
+
 h1{
     justify-content: center;
     text-align: center;
