--- a/style.css
+++ b/style.css
@@ -44,3 +44,9 @@ h1{
     border: 4px solid white;
     border-radius: 10px;
 }
+
+.rm{
+    justify-content: center;
+    text-align: center;
+    background-color: black;
+}
